--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4002,15 +4002,14 @@ For instance $l_\rho^{\SU}(\sigma)$ is the number of consecutive ascending runs,
 
 \subsection{Matrix description}
 
-We first recall the alternate descriptions of the $\SUD$ diagonal from~\cite{SaneblidzeUmble} and~\cite{SaneblidzeUmble-comparingDiagonals}, that we would like to transfer to $\LAD$. 
-In particular, we explicitly relate the matrix and cubical descriptions of the $\SUD$ diagonal, to the description of the $\SUD$ diagonal given in \cref{def:classical-SU}.
-\\\\
-We previously saw that SCPs and permutations are in bijection (\cref{def:strong-complementary-pairs}). 
-There is also a third equivalent way to encode this data, the \emph{step matrices} of Definition 6 of~\cite{SaneblidzeUmble}.
-Informally, given a permutation $\sigma$, start in the bottom left corner of a matrix, and write increasing sequences vertically, and decreasing sequences horizontally. All other entries are $0$. Here is an example permutation, its SCP, and its step matrix, with all $0$ entries omitted.
-{\small
+For completeness, we recall from \cite{SaneblidzeUmble} and \cite{SaneblidzeUmble-comparingDiagonals} the matrix description of facets of the $\SU$ diagonal.
+We previously saw that $\SCP$s and permutations are in bijection (\cref{def:strong-complementary-pairs}). 
+There is also a third equivalent way to encode this data, the \defn{step matrices} of \cite[Def. 6]{SaneblidzeUmble}.
+Given a permutation, one defines its associated step matrix by starting in the bottom left corner, writing increasing sequences vertically and decreasing sequences horizontally one after the other, leaving all other entries $0$.
+See \cref{fig:step-matrix}.
+\begin{figure}[h!]
 \begin{center}
-\raisebox{3em}{$6524713$}
+\raisebox{3em}{$6|5|2|4|7|1|3$}
 $\quad \quad$
 \begin{tikzpicture}[scale=.7]  
 \node[anchor=east] (1) at (-1.5, -1) {$256$};
@@ -4046,52 +4045,46 @@ $
 $
 }
 \end{center}
-}
-Given a $l\times k$ matrix $A$ with all non-zero entries drawn without replacement from $[n]$, let $\sigma_i(A)$ denote the non-zero entries of the $i$\ordinal{} column, and $\tau_j(A)$ the non-zero entries of the $(l-j+1)$\ordinalst{} row. 
-For example, we labelled the rows and columns of the prior step matrix in this fashion.
-With this identification, we can apply \cref{def:SU-admissible}, to identify $1$-block moveable subsets of the matrix $M$, and we can apply \cref{def:SU-admissible}, to identify sequences of shifts which are admissible of original type.
-We now define a suitable subset shift action on these matrices.
-\begin{definition} [SU Matrix Subset Shifts]
-A non-empty set of elements of a matrix $M_i \subset \sigma_i(A)$ (\resp $M_{i}\subset \tau_{i}(A)$) is $1$-block right (left) movable if
-\begin{enumerate}
-	\item $\min \sigma_i(A) \notin M_i$ (\resp $\min \tau_{i}(A) \notin M_i$), and
-	\item $\min M_i> \max \sigma_{i+1}(A)$ (\resp $\min M_{i}> \max \tau_{i-1}(A)$).
+\caption{A permutation, its associated $\SCP$, and their step matrix.}
+\label{fig:step-matrix}
+\end{figure}
+
+Given a matrix $A$ with all non-zero entries the elements $[n]$, let $\sigma_i(A)$ denote the non-zero entries of the $i$\ordinal{} column, and $\tau_j(A)$ the non-zero entries of the $(l-j+1)$\ordinalst{} row, see the labelling in \cref{fig:step-matrix}.
+With this identification, the definitions of the shift operators can be translated directly:
+the right shift operator $R_{M}$ shifts the elements of a subset $M \subset \sigma_i(A)$ one column to the right, or one row up, replacing only elements of value $0$, and leaving $0$ elements in their wake, while the left shift operator $L_{M}$ shifts the elements of $M$ to the left, or down one row.
+The translation of admissibility of sequence of shifts (\cref{def:SU-admissible,def:LA-admissible}) is also straightforward.
+
+\begin{definition}
+	A right shift $R_M$ of a non-empty set of elements of a matrix $M \subset \sigma_i(A)$ (\resp $M_{i}\subset \tau_{i}(A)$) block-admissible if
+	\begin{enumerate}
+		\item $\max \sigma_i(A) \notin M_i$ (\resp $\max \tau_{i}(A) \notin M_i$), and
+		\item $\max M_i < \min \sigma_{i-1}(A)$ (\resp $\max M_{i} < \min \tau_{i+1}(A)$).
 \end{enumerate}
-The right matrix subset shift operator $R_{M_i}$ shifts the elements of $M_i$ right one column, \ie if $A_{k,l} \in M_i$ then $(R_{M_i}A)_{k,l+1} = A_{k,l}$, replacing only elements of value $0$, and leaving $0$ elements in their wake.
-The left matrix subset shift operator $L_{M_i}$ shifts the elements of $M_i$ down one row, replacing only elements of value $0$, and leaving $0$ elements in their wake.
-\end{definition}
+
 \begin{proposition}
-The matrix subset shift operators are well-defined.
+The matrix shift operators are well-defined.
 \end{proposition}
 \begin{proof}
+It suffices to work with the original description of the $\SU$ diagonal.
 We verify the claim that the matrix shift operators never replace non-zero elements.
-It is straightforward to show that this is true when a shift operator is applied to a $SCP$.
+It is straightforward to show that this is true when a shift operator is applied to a $\SCP$.
 From here we proceed inductively.
-We assume that all prior shift operators have been well-defined, and we then check that applying another valid sequential shift operator is also well-defined.
-Suppose that $M_i$ is $1$-block moveable, and that $R_{M_i}$ is not well-defined as it tries to move a value $m$ into a non-zero matrix entry $n$.
+We assume that all prior shift operators have been well-defined, and we then check that applying another admissible shift operator is also well-defined.
+Suppose that adn admissible right shift $R_{M}$ is not well-defined as it tries to move a value $m$ into a non-zero matrix entry $n$.
 Then, $n$ must have been placed into that column by a prior left shift operator $L_{N_j}$, and consequently $n>\min N_j > \max \tau_{j-1}> m$.
 However, $n\in \sigma_{i+1}$ so $\max \sigma_{i+1}>n>m>\min M_i $ implies that $M_i$ is not $1$-block moveable, a contradiction.
 \end{proof}
 
-
-\begin{definition}[{\cite[Def.~7]{SaneblidzeUmble}}]
-We define the set of \emph{configuration matrices} $\mathcal{C}$, to be those matrices  corresponding to $SCP$s and those generated by admissible sequences of shifts.
-\end{definition}
+The \emph{configuration matrices} \cite[Def. 7]{SaneblidzeUmble} are the matrices corresponding to $\SCP$s and those generated by admissible sequences of shifts.
+From the definitions we 
 
 \begin{proposition}[\cite{SaneblidzeUmble}]
 The set of $\SU$ configuration matrices are in bijection with the facets of~$\SUD$.
 \end{proposition}
-\begin{proof}
-As configuration matrices have the same recursive description as the original $\SUD$ diagonal (\cref{def:classical-SU}), and $SCP$s are in bijection with step matrices, the result immediately follows.
-\end{proof}
+
 
 As a result of the face poset isomorphism $t(r\times r)$ we also immediately obtain a matrix description of the $\LA$ diagonal.
-\begin{definition}[LA Matrix Subset Shifts]
-A non-empty set of elements of a matrix $M_i \subset \sigma_i(A)$ (\resp $M_{i}\subset \tau_{i}(A)$) is $1$-block right (left) movable if
-\begin{enumerate}
-	\item $\max \sigma_i(A) \notin M_i$ (\resp $\max \tau_{i}(A) \notin M_i$), and
-	\item $\max M_i < \min \sigma_{i-1}(A)$ (\resp $\max M_{i} < \min \tau_{i+1}(A)$).
-\end{enumerate}
+
 The right matrix subset shift operator $R_{M_i}$ shifts the elements of $M_i$ left one column, replacing only elements of value $0$, and leaving $0$ elements in their wake.
 The left matrix subset shift operator $L_{M_i}$ shifts the elements of $M_i$ up one row, replacing only elements of value $0$, and leaving $0$ elements in their wake.
 \end{definition}
